# ormery

./: .gitignore  CLAUDE.md  Makefile  README.md  orm-usage.md  package.json  querying-api.md  run-python.py  vite.config.js
.claude/: settings.local.json
.deciduous/: deciduous.db
.deciduous/documents/: SKINNY_ECTO_DESIGN.md.9cda62d1
.github/: notify-app-template.yml
.github/workflows/: publish-libs.yml
apps/csharp/TodoApp/: Program.cs  TodoApp.csproj
apps/java/: README.md  pom.xml
apps/js/: app.js  package.json
apps/lua/: app.lua  db.lua
apps/py/: app.py
apps/rust/: Cargo.toml
apps/rust/src/: main.rs
docs/: git-history.json  graph-data.json  index.html  secure-composition-archaeology.md
src/: config.temper.md  demo-controller.temper.md  ormery.temper.md  skinny-ecto.temper.md  syntax-highlighter.temper.md
src/core/: collector.temper.md  contextual-autoescaping.temper.md
src/html/: safe-html-transition-tables.temper.md  safe-html.temper.md
src/secure-composition/: .gitignore  README.md  config.temper.md
src/secure-composition/core/: contextual-autoescaping.temper.md
src/secure-composition/examples/: corner-cases.temper.md  usage.temper.md
src/secure-composition/html/: css-delegate.temper.md  html-codec.temper.md  js-delegate.temper.md  (+4 more)
src/secure-composition/scripts/: pyproject.toml
src/secure-composition/scripts/regen_temper/: __main__.py
src/sql/: imports.temper.md  model.temper.md
src/url/: url-codec.temper.md
tutorial/: README.md  build-bundle.sh  bundle-temper.sh  demo.html  index.html  interactive.html  serve.sh
(+131 files in other folders)
