[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
askama = "0.13"
serde = { version = "1", features = ["derive"] }
tower-http = { version = "0.6", features = ["fs"] }
ormery = { path = "vendor/ormery" }
temper-core = { path = "vendor/temper-core" }
