[project]
name = "regen_temper"
version = "1.0.0"
requires-python = ">=3.10"

[tool.poetry.dependencies]

[tool.ruff.lint]
ignore = [
    # Allow `if a: b` style usage here.
    # https://docs.astral.sh/ruff/rules/multiple-statements-on-one-line-colon/
    "E701",
    # Allow unneeded `f"..."` syntax here for consistent layout.
    # https://docs.astral.sh/ruff/rules/f-string-missing-placeholders/
    "F541",
]
